# repro-manifest

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
src/repro_manifest/: __init__.py  __main__.py  cli.py  collect.py  diff.py  gitinfo.py  models.py  render.py  runner.py  storage.py
tests/: test_collect.py  test_diff.py  test_gitinfo.py  test_storage_cli.py
